--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -55,6 +55,22 @@ pipeline {
         }
       }
     }
+    stage('Update K8s Manifests') {
+    steps {
+        script {
+            sh '''
+              sed -i "s|replaceImageTag|${BUILD_NUMBER}|g" java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+
+              git config user.email "jenkins@example.com"
+              git config user.name "Jenkins CI"
+              git add java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests/deployment.yml
+              git commit -m "Update image tag to ${BUILD_NUMBER}"
+              git push origin main
+            '''
+        }
+    }
+}
+
 
     stage('Update Deployment File') {
       environment {
